[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextpacker-mcp"
version = "0.1.0"
description = "MCP server for ContextPacker — code context retrieval for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
contextpacker-mcp = "server:main"

[project.urls]
Homepage = "https://contextpacker.com"
Repository = "https://github.com/contextpacker/contextpacker-mcp"
Documentation = "https://contextpacker.com/docs"
